--- a/.releaserc
+++ b/.releaserc
@@ -1,11 +1,17 @@
 {
-    "branches": ["main"],
-    "plugins": [
+  "branches": [
+    "main"
+  ],
+  "plugins": [
+    [
       "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/github",
-      "@semantic-release/git"
-    ]
-  }
-  
+      {
+        "preset": "conventionalcommits"
+      }
+    ],
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/git"
+  ]
+}
