--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,15 @@ jobs:
         with:
           node-version: "lts/*"
       - name: Install semantic release
-        run: npx semantic-release
+        run:  |
+            npm install -g \
+                semantic-release \
+                @semantic-release/changelog \
+                @semantic-release/git \
+                @semantic-release/github \
+                @semantic-release/release-notes-generator \
+                @semantic-release/commit-analyzer \
+                conventional-changelog-conventionalcommits
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
