--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,41 +1,47 @@
-# name: Release
-# on:
-#   push:
-#     branches:
-#       - master # or main
+name: Release
+on:
+  push:
+    branches:
+      - master # or main
 
-# permissions:
-#   contents: read # for checkout
+permissions:
+  contents: read # for checkout
 
-# jobs:
-#   release:
-#     name: Release
-#     runs-on: ubuntu-latest
-#     permissions:
-#       contents: write # to be able to publish a GitHub release
-#       issues: write # to be able to comment on released issues
-#       pull-requests: write # to be able to comment on released pull requests
-#       id-token: write # to enable use of OIDC for npm provenance
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
-#         with:
-#           fetch-depth: 0
-#       - name: Setup Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: "lts/*"
-#       - name: Install semantic release
-#         run:  |
-#             npm install -g \
-#                 semantic-release \
-#                 @semantic-release/changelog \
-#                 @semantic-release/git \
-#                 @semantic-release/github \
-#                 @semantic-release/release-notes-generator \
-#                 @semantic-release/commit-analyzer \
-#                 conventional-changelog-conventionalcommits
-#       - name: Release
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         run: npx semantic-release
+jobs:
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      pull-requests: write # to be able to comment on released pull requests
+      id-token: write # to enable use of OIDC for npm provenance
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+
+      - name: Install semantic release
+        run: |
+          npm install -g \
+              semantic-release \
+              @semantic-release/changelog \
+              @semantic-release/git \
+              @semantic-release/github \
+              @semantic-release/release-notes-generator \
+              @semantic-release/commit-analyzer \
+              conventional-changelog-conventionalcommits
+      - name: Prepare version and Release notes
+        run: |
+          ./release-prep.sh
+          cat RELEASE_TAG
+          cat RELEASE_NOTES
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release
